--- a/pages/templates/pages/login.html
+++ b/pages/templates/pages/login.html
@@ -29,7 +29,7 @@ The above copyright notice and this permission notice shall be included in all c
     href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
   <!-- CSS Files -->
-  <link href="{% static 'pages/css/material-kit.css?v=2.0.7' %}" rel="stylesheet" />
+  <link href="{% static 'pages/css/material-kit.css' %}" rel="stylesheet" />
   <!-- CSS Just for demo purpose, don't include it in your project -->
   <link href="{% static 'pages/demo/demo.css' %}" rel="stylesheet" />
 </head>
