update the footer

--- a/pages/templates/pages/_base.html
+++ b/pages/templates/pages/_base.html
@@ -100,22 +100,22 @@ The above copyright notice and this permission notice shall be included in all c
             <nav class="float-left">
                 <ul>
                     <li>
-                        <a href="https://www.creative-tim.com/">
-                            Creative Tim
+                        <a href="">
+                            Volunteer
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.creative-tim.com/presentation">
+                        <a href="">
                             About Us
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.creative-tim.com/blog">
+                        <a href="">
                             Blog
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.creative-tim.com/license">
+                        <a href="">
                             Licenses
                         </a>
                     </li>
@@ -126,7 +126,7 @@ The above copyright notice and this permission notice shall be included in all c
                 <script>
                     document.write(new Date().getFullYear())
                 </script>, made with <i class="material-icons">favorite</i> by
-                <a href="https://www.creative-tim.com/" target="_blank">Creative Tim</a> for a better web.
+                <a href="" target="_blank">volunteers</a> for a better travel.
             </div>
         </div>
     </footer>
@@ -135,13 +135,18 @@ The above copyright notice and this permission notice shall be included in all c
     <script src="{% static 'pages/js/core/popper.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'pages/js/core/bootstrap-material-design.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'pages/js/plugins/moment.min.js' %}"></script>
+
     <!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker -->
     <script src="{% static 'pages/js/plugins/bootstrap-datetimepicker.js' %}" type="text/javascript"></script>
+
     <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
     <script src="{% static 'pages/js/plugins/nouislider.min.js' %}" type="text/javascript"></script>
+
     <!--  Google Maps Plugin    -->
+
     <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
     <script src="{% static 'pages/js/material-kit.js' %}" type="text/javascript"></script>
+
 </body>
 
 </html>
