added links to login and logout pages

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -34,7 +34,10 @@
                             <button type="submit" class="btn btn-primary">Login</button>
                         </div>
                     </form>
+                    <p class="description text-center">Dont' have an account? <a href="{% url 'account_signup' %}">Sign
+                            up here</a></p>
                 </div>
+
             </div>
         </div>
     </div>
