--- a/templates/_base.html
+++ b/templates/_base.html
@@ -64,10 +64,15 @@ The above copyright notice and this permission notice shall be included in all c
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.creative-tim.com/product/material-kit-pro"
-                            target="_blank">
-                            <i class="material-icons">unarchive</i> Upgrade to PRO
+                        {% if user.is_authenticated %}
+                        <a class="nav-link" href="{% url 'account_logout' %}">
+                            <i class="material-icons">face</i>
                         </a>
+                        {% else %}
+                        <a class="nav-link" href="{% url 'account_login' %}">
+                            <i class="material-icons">face</i>
+                        </a>
+                        {% endif %}
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" rel="tooltip" title="" data-placement="bottom"
