--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,16 +1,41 @@
 {% extends '_base.html' %}
+{% load static %}
 {% load crispy_forms_tags %}
-
 {% block title %}Log Out{% endblock title %}
 
 {% block content %}
-<div class="container">
-    <h1>Log Out</h1>
-    <p>Are you sure you want to log out?</p>
-    <form method="POST" action="{% url 'account_logout' %}">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <button class="btn btn-danger" type="submit">Log Out</button>
-    </form>
+<div class="page-header header-filter"
+    style="background-image: url({% static 'pages/img/bg7.jpg' %}); background-size: cover; background-position: top center;">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 col-md-6 ml-auto mr-auto">
+                <div class="card card-login">
+                    <form class="form" method="POST" action="">
+                        {% csrf_token %}
+                        <div class="card-header card-header-primary text-center">
+                            <h4 class="card-title">Logout</h4>
+                            <div class="social-line">
+                                <a href="#pablo" class="btn btn-just-icon btn-link">
+                                    <i class="fa fa-facebook-square"></i>
+                                </a>
+                                <a href="#pablo" class="btn btn-just-icon btn-link">
+                                    <i class="fa fa-twitter"></i>
+                                </a>
+                                <a href="#pablo" class="btn btn-just-icon btn-link">
+                                    <i class="fa fa-google-plus"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="card-body ml-2 py-5 my-5">
+                            {{ form|crispy }}
+                            <div class="text-center mb-3">
+                                <button type="submit" class="btn btn-primary">Logout</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock content %}
