--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,19 +1,40 @@
 {% extends '_base.html' %}
+{% load static %}
 {% load crispy_forms_tags %}
-
 {% block title %}Sign Up{% endblock title %}
 
 {% block content %}
-<div class="row justify-content-center mt-5">
-    <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-        <div class="card shadow rounded-lg">
-            <div class="card-body">
-                <h2 class="card-title">Sign Up</h2>
-                <form method="POST">
-                    {% csrf_token %}
-                    {{ form|crispy }}
-                    <button class="btn btn-success" type="submit">Sign Up</button>
-                </form>
+<div class="page-header header-filter"
+    style="background-image: url({% static 'pages/img/bg7.jpg' %}); background-size: cover; background-position: top center;">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 col-md-6 ml-auto mr-auto">
+                <div class="card card-login">
+                    <form class="form" method="POST" action="">
+                        {% csrf_token %}
+                        <div class="card-header card-header-primary text-center">
+                            <h4 class="card-title">Sign Up</h4>
+                            <div class="social-line">
+                                <a href="#pablo" class="btn btn-just-icon btn-link">
+                                    <i class="fa fa-facebook-square"></i>
+                                </a>
+                                <a href="#pablo" class="btn btn-just-icon btn-link">
+                                    <i class="fa fa-twitter"></i>
+                                </a>
+                                <a href="#pablo" class="btn btn-just-icon btn-link">
+                                    <i class="fa fa-google-plus"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <p class="description text-center">Or Be Classical</p>
+                        <div class="card-body ml-2">
+                            {{ form|crispy }}
+                        </div>
+                        <div class="text-center mb-3">
+                            <button type="submit" class="btn btn-primary">Sign Up</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
