--- a/templates/_base.html
+++ b/templates/_base.html
@@ -37,8 +37,8 @@ The above copyright notice and this permission notice shall be included in all c
         id="sectionsNav">
         <div class="container">
             <div class="navbar-translate">
-                <a class="navbar-brand" href="https://demos.creative-tim.com/material-kit/index.html">
-                    Material Kit </a>
+                <a class="navbar-brand" href="{% url 'home' %}">
+                    Volu</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="sr-only">Toggle navigation</span>
@@ -110,7 +110,7 @@ The above copyright notice and this permission notice shall be included in all c
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="{% url 'about' %}">
                             About Us
                         </a>
                     </li>
