shortened the contact and feedback forms

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -132,7 +132,7 @@ The above copyright notice and this permission notice shall be included in all c
                     </li>
                 </ul>
             </nav>
-            <div class="copyright float-right">
+            <div class="copyright float-right d-none d-md-inline">
                 &copy;
                 <script>
                     document.write(new Date().getFullYear())
