--- a/pages/templates/pages/feedback.html
+++ b/pages/templates/pages/feedback.html
@@ -7,7 +7,7 @@
 <div class="page-header header-filter"
     style="background-image: url({% static 'pages/img/bg7.jpg' %}); background-size: cover; background-position: top center;">
     <div class="container">
-        <div class="row">
+        <div class="row mt-5 mt-md-0">
             <div class="col-lg-4 col-md-6 ml-auto mr-auto">
                 <div class="card card-login">
                     <form class="form" method="POST" action="">
