--- a/templates/_base.html
+++ b/templates/_base.html
@@ -99,7 +99,7 @@ The above copyright notice and this permission notice shall be included in all c
             </div>
         </div>
     </nav>
-    {% include '_toast.html' %}
+    {% include '_alert.html' %}
     {% block content %}{% endblock content %}
     <footer class="footer">
         <div class="container">
