--- a/templates/_toast.html
+++ b/templates/_toast.html
@@ -5,7 +5,7 @@
         {% if messages %}
         {% for message in messages %}
         <div class="toast text-white border-white" role="alert" aria-live="assertive" aria-atomic="true"
-            data-delay=5000>
+            data-delay="5000">
             <div class="toast-header">
                 <strong class="mr-auto">Message</strong>
                 <button type="button" class="ml-2 mb-1 close text-white" data-dismiss="toast" aria-label="Close">
