--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="page-header header-filter"
     style="background-image: url({% static 'pages/img/bg7.jpg' %}); background-size: cover; background-position: top center;">
-    <div class="container mt-auto">
+    <div class="container">
         <div class="row mt-5">
             <div class="col-lg-4 col-md-6 ml-auto mr-auto">
                 <div class="card card-login">
