--- a/templates/_base.html
+++ b/templates/_base.html
@@ -32,7 +32,7 @@ The above copyright notice and this permission notice shall be included in all c
     <link href="{% static 'pages/css/material-kit.css' %}" rel="stylesheet" />
 </head>
 
-<body class="login-page sidebar-collapse">
+<body class="{% block page %}login-page{% endblock page %} sidebar-collapse">
     <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100"
         id="sectionsNav">
         <div class="container">
