wired up profile view

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -61,6 +61,9 @@ The above copyright notice and this permission notice shall be included in all c
                                 class="dropdown-item">
                                 <i class="material-icons">content_paste</i> Documentation
                             </a>
+                            <a href="{% url 'profile' %}" class="dropdown-item">
+                                <i class="material-icons">contacts</i> Profile
+                            </a>
                         </div>
                     </li>
                     <li class="nav-item">
