--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,98 +1,47 @@
 {% extends '_base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 {% block title %}Profile{% endblock title %}
+
 {% block content %}
 <div class="page-header header-filter" data-parallax="true"
-  style="background-image: url({% static 'pages/img/city-profile.jpg' %});">
-  <div class="main main-raised">
-    <div class="profile-content">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 ml-auto mr-auto">
-            <div class="profile">
-              <div class="avatar">
-                <img src="{% static 'pages/img/faces/christian.jpg' %}" alt="Circle Image"
-                  class="img-raised rounded-circle img-fluid">
-              </div>
-              <div class="name">
-                <h3 class="title">Christian Louboutin</h3>
-                <h6>Designer</h6>
-                <a href="#pablo" class="btn btn-just-icon btn-link btn-dribbble"><i class="fa fa-dribbble"></i></a>
-                <a href="#pablo" class="btn btn-just-icon btn-link btn-twitter"><i class="fa fa-twitter"></i></a>
-                <a href="#pablo" class="btn btn-just-icon btn-link btn-pinterest"><i class="fa fa-pinterest"></i></a>
-              </div>
+  style="background-image: url({% static 'pages/img/bg2.jpg' %}); background-size: cover; background-position: top center;">
+  <div class="container">
+    <div class="row mt-5">
+      <div class="col-lg-4 col-md-6 ml-auto mr-auto">
+        <div class="card card-login">
+          <div class="card-header card-header-primary text-center">
+            <h4 class="card-title">{{ user }}</h4>
+            <div class="social-line">
+              <a href="#pablo" class="btn btn-just-icon btn-link">
+                <i class="fa fa-facebook-square"></i>
+              </a>
+              <a href="#pablo" class="btn btn-just-icon btn-link">
+                <i class="fa fa-twitter"></i>
+              </a>
+              <a href="#pablo" class="btn btn-just-icon btn-link">
+                <i class="fa fa-google-plus"></i>
+              </a>
             </div>
           </div>
+          <p class="description text-center">Or Be Classical</p>
+          <div class="card-body ml-2">
+            <ul>
+              <li>Bio: {{ user.profile.bio }}</li>
+              <li>Birth date: {{ user.profile.birth_date }}</li>
+              <li>Country: {{ user.country }}</li>
+            </ul>
+          </div>
+          <div class="text-center mb-3">
+            <a href="{{ user.profile.get_update_url }}" class="btn btn-primary text-white">Edit</a>
+          </div>
+
+          <p class="description text-center">Dont' have an account? <a href="{% url 'account_signup' %}">Sign
+              up here</a></p>
         </div>
-        <div class="description text-center">
-          <p>An artist of considerable range, Chet Faker &#x2014; the name taken by Melbourne-raised, Brooklyn-based
-            Nick Murphy &#x2014; writes, performs and records all of his own music, giving it a warm, intimate feel with
-            a solid groove structure. </p>
-        </div>
-        <div class="row">
-          <div class="col-md-6 ml-auto mr-auto">
-            <div class="profile-tabs">
-              <ul class="nav nav-pills nav-pills-icons justify-content-center" role="tablist">
-                <li class="nav-item">
-                  <a class="nav-link active" href="#studio" role="tab" data-toggle="tab">
-                    <i class="material-icons">camera</i> Studio
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#works" role="tab" data-toggle="tab">
-                    <i class="material-icons">palette</i> Work
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#favorite" role="tab" data-toggle="tab">
-                    <i class="material-icons">favorite</i> Favorite
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="tab-content tab-space">
-          <div class="tab-pane active text-center gallery" id="studio">
-            <div class="row">
-              <div class="col-md-3 ml-auto">
-                <img src="{% static 'pages/img/examples/studio-1.jpg' %}" class="rounded">
-                <img src="{% static 'pages/img/examples/studio-2.jpg' %}" class="rounded">
-              </div>
-              <div class="col-md-3 mr-auto">
-                <img src="{% static 'pages/img/examples/studio-5.jpg' %}" class="rounded">
-                <img src="{% static 'pages/img/examples/studio-4.jpg' %}" class="rounded">
-              </div>
-            </div>
-          </div>
-          <div class="tab-pane text-center gallery" id="works">
-            <div class="row">
-              <div class="col-md-3 ml-auto">
-                <img src="{% static 'pages/img/examples/olu-eletu.jpg' %}" class="rounded">
-                <img src="{% static 'pages/img/examples/clem-onojeghuo.jpg' %}" class="rounded">
-                <img src="{% static 'pages/img/examples/cynthia-del-rio.jpg' %}" class="rounded">
-              </div>
-              <div class="col-md-3 mr-auto">
-                <img src="{% static 'pages/img/examples/mariya-georgieva.jpg' %}" class="rounded">
-                <img src="{% static 'pages/img/examples/clem-onojegaw.jpg' %}" class="rounded">
-              </div>
-            </div>
-          </div>
-          <div class="tab-pane text-center gallery" id="favorite">
-            <div class="row">
-              <div class="col-md-3 ml-auto">
-                <img src="{% static 'pages/img/examples/mariya-georgieva.jpg' %}" class="rounded">
-                <img src="{% static 'pages/img/examples/studio-3.jpg' %}" class="rounded">
-              </div>
-              <div class="col-md-3 mr-auto">
-                <img src="{% static 'pages/img/examples/clem-onojeghuo.jpg' %}" class="rounded">
-                <img src="{% static 'pages/img/examples/olu-eletu.jpg' %}" class="rounded">
-                <img src="{% static 'pages/img/examples/studio-1.jpg' %}" class="rounded">
-              </div>
-            </div>
-          </div>
-        </div>
+
       </div>
     </div>
   </div>
-  {% endblock content %}
+</div>
+{% endblock content %}
