basic update view for user profile

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -61,7 +61,7 @@ The above copyright notice and this permission notice shall be included in all c
                                 class="dropdown-item">
                                 <i class="material-icons">content_paste</i> Documentation
                             </a>
-                            <a href="{% url 'profile' %}" class="dropdown-item">
+                            <a href="{{ user.profile.get_absolute_url }}" class="dropdown-item">
                                 <i class="material-icons">contacts</i> Profile
                             </a>
                         </div>
