--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -27,9 +27,10 @@
           <p class="description text-center">Or Be Classical</p>
           <div class="card-body ml-2">
             <ul>
-              <li>Bio: {{ user.profile.bio }}</li>
-              <li>Birth date: {{ user.profile.birth_date }}</li>
-              <li>Country: {{ user.country }}</li>
+              <li>Bio: {{ profile.bio }}</li>
+              <li>Birth date: {{ profile.birth_date }}</li>
+              <li>Country: <img src="{{ profile.country.flag }}" alt="country-flag"> {{ profile.country.name }}
+              </li>
             </ul>
           </div>
           <div class="text-center mb-3">
