--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -24,7 +24,7 @@
               </a>
             </div>
           </div>
-          <p class="description text-center">Or Be Classical</p>
+          <p class="description text-center">Profile</p>
           <div class="card-body ml-2">
             <ul>
               <li>Bio: {{ profile.bio }}</li>
