--- a/users/templates/users/profile_update_form.html
+++ b/users/templates/users/profile_update_form.html
@@ -27,7 +27,7 @@
                             </div>
                         </div>
 
-                        <p class="description text-center">Or Be Classical</p>
+                        <p class="description text-center">Update</p>
                         <div class="card-body ml-2">
                             {{ form|crispy }}
                         </div>
