--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -1,10 +1,16 @@
 {% extends '_base.html' %}
 {% load static %}
-
+{% load crispy_forms_tags %}
 {% block content %}
 <div class="page-header" style="background-image: url({% static 'pages/img/bg2.jpg' %});">
     <div class="container">
-
+        <form action="" method="POST">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button class="btn btn-primary btn-link text-white" type="submit">
+                <i class="material-icons" style="font-size: 36px">search</i>
+            </button>
+        </form>
     </div>
 </div>
 {% endblock content %}
