--- a/users/templates/users/profile_detail.html
+++ b/users/templates/users/profile_detail.html
@@ -11,7 +11,7 @@
       <div class="col-lg-4 col-md-6 ml-auto mr-auto">
         <div class="card card-login">
           <div class="card-header card-header-primary text-center">
-            <h4 class="card-title">{{ user }}</h4>
+            <h4 class="card-title">{{ profile.user }}</h4>
             <div class="social-line">
               <a href="#pablo" class="btn btn-just-icon btn-link">
                 <i class="fa fa-facebook-square"></i>
@@ -33,10 +33,11 @@
               </li>
             </ul>
           </div>
+          {% if user == profile.user %}
           <div class="text-center mb-3">
             <a href="{{ user.profile.get_update_url }}" class="btn btn-primary text-white">Edit</a>
           </div>
-
+          {% endif %}
           <p class="description text-center">Dont' have an account? <a href="{% url 'account_signup' %}">Sign
               up here</a></p>
         </div>
