--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -4,6 +4,9 @@
 {% block content %}
 <div class="page-header" style="background-image: url({% static 'pages/img/bg2.jpg' %});">
     <div class="container">
+        <video playsinline autoplay muted loop poster="stars.jpg" id="bgvid">
+            <source src="{% static 'pages/vid/stars.mp4' %}" type="video/mp4">
+        </video>
         <form action="" method="POST">
             {% csrf_token %}
             <div class="input-group">
