--- a/templates/_base.html
+++ b/templates/_base.html
@@ -30,6 +30,7 @@ The above copyright notice and this permission notice shall be included in all c
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
     <!-- CSS Files -->
     <link href="{% static 'pages/css/material-kit.css' %}" rel="stylesheet" />
+    <link href="{% static 'pages/css/base.css' %}" rel="stylesheet" />
 </head>
 
 <body class="{% block page %}login-page{% endblock page %} sidebar-collapse">
@@ -160,7 +161,6 @@ The above copyright notice and this permission notice shall be included in all c
 
     <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
     <script src="{% static 'pages/js/material-kit.js' %}" type="text/javascript"></script>
-    <script>$('.toast').toast('show')</script>
 </body>
 
 </html>
