--- a/templates/_base.html
+++ b/templates/_base.html
@@ -30,6 +30,7 @@ The above copyright notice and this permission notice shall be included in all c
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
     <!-- CSS Files -->
     <link href="{% static 'pages/css/material-kit.css' %}" rel="stylesheet" />
+    <link rel="stylesheet" href="{% static 'flags/sprite-hq.css' %}">
     <link href="{% static 'pages/css/base.css' %}" rel="stylesheet" />
 </head>
 
