improved rendering of places list

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -34,7 +34,7 @@ The above copyright notice and this permission notice shall be included in all c
     <link href="{% static 'pages/css/base.css' %}" rel="stylesheet" />
 </head>
 
-<body class="{% block page %}login-page{% endblock page %} sidebar-collapse">
+<body class="{% block page %}login-page{% endblock page %}">
     <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100"
         id="sectionsNav">
         <div class="container">
