--- a/places/templates/places/place_list.html
+++ b/places/templates/places/place_list.html
@@ -3,11 +3,12 @@
 {% load crispy_forms_tags %}
 
 {% block title %}Places{% endblock title %}
-
+{% block page %}landing-page sidebar-collapse{% endblock page %}
 {% block content %}
-<div class="page-header header-filter">
-    <div class="container">
-        <div class="row">
+
+<div class="main bg-dark">
+    <div class="container pt-5 mb-3">
+        <div class="row mt-5">
             {% for place in place_list %}
             <div class="col-12 col-md-6 col-lg-4 mb-3">
                 <div class="card h-100">
@@ -31,48 +32,50 @@
             {% endfor %}
 
         </div>
+
+        <!-- Paginator -->
+        <nav aria-label="Page navigation" class="py-5">
+            <ul class="pagination pagination-separate justify-content-end">
+                {% if page_obj.has_previous %}
+                <li class="page-item">
+                    <a class="page-link text-white" href="?page=1" aria-label="First">
+                        <span aria-hidden="true">First</span>
+                        <span class="sr-only">First</span>
+                    </a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link text-white" href="?page={{ page_obj.previous_page_number }}"
+                        aria-label="Previous">
+                        <span aria-hidden="true">{{ page_obj.previous_page_number }}</span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                </li>
+                {% endif %}
+                <li class="page-item active">
+                    <span class="page-link">
+                        {{ page_obj.number }}
+                        <span class="sr-only">(current)</span>
+                    </span>
+                </li>
+                {% if page_obj.has_next %}
+                <li class="page-item">
+                    <a class="page-link text-white" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+                        <span aria-hidden="true">{{ page_obj.next_page_number }}</span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link text-white" href="?page={{ page_obj.paginator.num_pages }}" aria-label="Last">
+                        <span aria-hidden="true">Last</span>
+                        <span class="sr-only">Last</span>
+                    </a>
+                </li>
+                {% endif %}
+            </ul>
+        </nav>
+        <!-- End Paginator -->
     </div>
+
 </div>
 
-
-<!-- Paginator -->
-<nav aria-label="Page navigation">
-    <ul class="pagination pagination-separate justify-content-end">
-        {% if page_obj.has_previous %}
-        <li class="page-item">
-            <a class="page-link" href="?page=1" aria-label="First">
-                <span aria-hidden="true">First</span>
-                <span class="sr-only">First</span>
-            </a>
-        </li>
-        <li class="page-item">
-            <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
-                <span aria-hidden="true">{{ page_obj.previous_page_number }}</span>
-                <span class="sr-only">Previous</span>
-            </a>
-        </li>
-        {% endif %}
-        <li class="page-item active">
-            <span class="page-link">
-                {{ page_obj.number }}
-                <span class="sr-only">(current)</span>
-            </span>
-        </li>
-        {% if page_obj.has_next %}
-        <li class="page-item">
-            <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
-                <span aria-hidden="true">{{ page_obj.next_page_number }}</span>
-                <span class="sr-only">Next</span>
-            </a>
-        </li>
-        <li class="page-item">
-            <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}" aria-label="Last">
-                <span aria-hidden="true">Last</span>
-                <span class="sr-only">Last</span>
-            </a>
-        </li>
-        {% endif %}
-    </ul>
-</nav>
-<!-- End Paginator -->
 {% endblock content %}
