--- a/templates/_base.html
+++ b/templates/_base.html
@@ -17,8 +17,12 @@ The above copyright notice and this permission notice shall be included in all c
 
 <head>
     <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="{% static 'pages/img/apple-icon.png' %}">
-    <link rel="icon" type="image/png" href="{% static 'pages/img/favicon.png' %}">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'pages/img/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'pages/img/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'pages/img/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'pages/img/site.webmanifest' %}">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>
         {% block title %}Volu{% endblock title %}
