--- a/templates/_base.html
+++ b/templates/_base.html
@@ -57,7 +57,7 @@ The above copyright notice and this permission notice shall be included in all c
                 <ul class="navbar-nav ml-auto">
                     <li class="dropdown nav-item">
                         <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                            <i class="material-icons">apps</i> Components
+                            <i class="material-icons">apps</i> Explore
                         </a>
                         <div class="dropdown-menu dropdown-with-icons">
                             <a href="../index.html" class="dropdown-item">
@@ -66,6 +66,9 @@ The above copyright notice and this permission notice shall be included in all c
                             <a href="https://demos.creative-tim.com/material-kit/docs/2.0/getting-started/introduction.html"
                                 class="dropdown-item">
                                 <i class="material-icons">content_paste</i> Documentation
+                            </a>
+                            <a href="{% url 'place_list' %}" class="dropdown-item">
+                                <i class="material-icons">explore</i> Places
                             </a>
                             <a href="{{ user.profile.get_absolute_url }}" class="dropdown-item">
                                 <i class="material-icons">contacts</i> Profile
