--- a/templates/_base.html
+++ b/templates/_base.html
@@ -115,7 +115,8 @@ The above copyright notice and this permission notice shall be included in all c
         </div>
     </nav>
     {% include '_alert.html' %}
-    {% block content %}{% endblock content %}
+    {% block content %}
+    {% endblock content %}
     <footer class="footer">
         <div class="container">
             <nav class="float-left">
