removed info prefix

--- a/templates/_alert.html
+++ b/templates/_alert.html
@@ -12,7 +12,7 @@
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true"><i class="material-icons">clear</i></span>
                 </button>
-                <b>Info:</b> {{ message }}
+                {{ message }}
             </div>
         </div>
         {% endfor %}
