removed old hyper links

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -47,13 +47,6 @@
                             <i class="material-icons">apps</i> Explore
                         </a>
                         <div class="dropdown-menu dropdown-with-icons">
-                            <a href="../index.html" class="dropdown-item">
-                                <i class="material-icons">layers</i> All Components
-                            </a>
-                            <a href="https://demos.creative-tim.com/material-kit/docs/2.0/getting-started/introduction.html"
-                                class="dropdown-item">
-                                <i class="material-icons">content_paste</i> Documentation
-                            </a>
                             <a href="{% url 'place_list' %}" class="dropdown-item">
                                 <i class="material-icons">explore</i> Places
                             </a>
@@ -77,22 +70,19 @@
                         {% endif %}
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom"
-                            href="https://twitter.com/CreativeTim" target="_blank"
+                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="" target="_blank"
                             data-original-title="Follow us on Twitter" rel="nofollow">
                             <i class="fa fa-twitter"></i>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom"
-                            href="https://www.facebook.com/CreativeTim" target="_blank"
+                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="" target="_blank"
                             data-original-title="Like us on Facebook" rel="nofollow">
                             <i class="fa fa-facebook-square"></i>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom"
-                            href="https://www.instagram.com/CreativeTimOfficial" target="_blank"
+                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="" target="_blank"
                             data-original-title="Follow us on Instagram" rel="nofollow">
                             <i class="fa fa-instagram"></i>
                         </a>
