--- a/templates/_base.html
+++ b/templates/_base.html
@@ -3,19 +3,18 @@
 <html lang="en">
 
 <head>
+    <title>{% block title %}Volu{% endblock title %}</title>
+
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
 
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'pages/img/apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'pages/img/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'pages/img/favicon-16x16.png' %}">
     <link rel="manifest" href="{% static 'pages/img/site.webmanifest' %}">
 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
 
-    <title>
-        {% block title %}Volu{% endblock title %}
-    </title>
 
     <!--     Fonts and icons     -->
     <link rel="stylesheet" type="text/css"
@@ -28,13 +27,14 @@
     <link href="{% static 'flags/sprite-hq.css' %}" rel="stylesheet" />
 </head>
 
-<body class="{% block page %}login-page{% endblock page %}">
+<body>
     <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100"
         id="sectionsNav">
         <div class="container">
             <div class="navbar-translate">
                 <a class="navbar-brand" href="{% url 'pages:home' %}">
-                    Volu</a>
+                    Volu
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="sr-only">Toggle navigation</span>
@@ -95,8 +95,11 @@
         </div>
     </nav>
     {% include '_alert.html' %}
-    {% block content %}
-    {% endblock content %}
+
+    {% block header %}{% endblock header %}
+    {% block content %}{% endblock content %}
+
+
     <footer class="footer">
         <div class="container">
             <nav class="float-left">
@@ -148,9 +151,8 @@
 
     <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
     <script src="{% static 'pages/js/plugins/nouislider.min.js' %}" type="text/javascript"></script>
-
     <!--  Google Maps Plugin    -->
-
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
     <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
     <script src="{% static 'pages/js/material-kit.js' %}" type="text/javascript"></script>
 </body>
