--- a/places/templates/places/place_list.html
+++ b/places/templates/places/place_list.html
@@ -1,81 +1,63 @@
 {% extends '_base.html' %}
-
+{% load static %}
 {% block title %}Places{% endblock title %}
-{% block content %}
 
-<div class="main bg-dark">
+
+{% block header %}
+<div class="page-header header-filter" data-parallax="true"
+    style="background-image: url({% static 'pages/img/bg3.jpg' %});">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 ml-auto mr-auto">
+                <div class="brand text-center">
+                    <h1>Places</h1>
+                    <h3 class="title text-center">to volunteer</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock header %}
+
+{% block content %}
+<div class="main main-raised">
     <div class="container pt-5 mb-3">
-        <div class="row mt-5">
-            {% for place in place_list %}
-            <div class="col-12 col-md-6 col-lg-4 mb-3">
-                <div class="card h-100">
-                    <a href="{{ place.get_absolute_url }}">
-                        <img class="card-img-top" src="https://picsum.photos/500" rel="nofollow" alt="Card image cap">
-                    </a>
-                    <div class="card-body">
-                        <div>
-                            <a href="{{ place.get_absolute_url }}" class="text-dark">
-                                <h4 class="card-text">{{ place.name|title }}</h4>
-                            </a>
-                            <p class="card-text">{{ place.description }}</p>
+        <div class="section text-center">
+            <h2 class="title">Places</h2>
+            <div class="row mt-5">
+
+                {% for place in place_list %}
+                <div class="col-12 col-md-6 col-lg-4 mb-3">
+                    <div class="card h-100">
+                        <a href="{{ place.get_absolute_url }}">
+                            <img class="card-img-top" src="https://picsum.photos/500" rel="nofollow"
+                                alt="Card image cap">
+                        </a>
+                        <div class="card-body">
+                            <div>
+                                <a href="{{ place.get_absolute_url }}" class="text-dark">
+                                    <h4 class="card-text">{{ place.name|title }}</h4>
+                                </a>
+                                <p class="card-text">{{ place.description }}</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card-footer d-flex justify-content-between">
-                        <div>
-                            {{ place.updated_on|date:"jS M" }}
-                        </div>
-                        <div>
-                            {{ place.country.name }}
-                            <i class="{{ place.country.flag_css }}"></i>
+                        <div class="card-footer d-flex justify-content-between">
+                            <div>
+                                {{ place.updated_on|date:"jS M" }}
+                            </div>
+                            <div>
+                                {{ place.country.name }}
+                                <i class="{{ place.country.flag_css }}"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            {% endfor %}
+                {% endfor %}
 
+            </div>
         </div>
 
-        <!-- Paginator -->
-        <nav aria-label="Page navigation" class="py-5">
-            <ul class="pagination pagination-separate justify-content-end">
-                {% if page_obj.has_previous %}
-                <li class="page-item">
-                    <a class="page-link text-white" href="?page=1" aria-label="First">
-                        <span aria-hidden="true">First</span>
-                        <span class="sr-only">First</span>
-                    </a>
-                </li>
-                <li class="page-item">
-                    <a class="page-link text-white" href="?page={{ page_obj.previous_page_number }}"
-                        aria-label="Previous">
-                        <span aria-hidden="true">{{ page_obj.previous_page_number }}</span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                </li>
-                {% endif %}
-                <li class="page-item active">
-                    <span class="page-link">
-                        {{ page_obj.number }}
-                        <span class="sr-only">(current)</span>
-                    </span>
-                </li>
-                {% if page_obj.has_next %}
-                <li class="page-item">
-                    <a class="page-link text-white" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
-                        <span aria-hidden="true">{{ page_obj.next_page_number }}</span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </li>
-                <li class="page-item">
-                    <a class="page-link text-white" href="?page={{ page_obj.paginator.num_pages }}" aria-label="Last">
-                        <span aria-hidden="true">Last</span>
-                        <span class="sr-only">Last</span>
-                    </a>
-                </li>
-                {% endif %}
-            </ul>
-        </nav>
-        <!-- End Paginator -->
+        {% include '_pagination.html' %}
     </div>
 
 </div>
