--- a/templates/_base.html
+++ b/templates/_base.html
@@ -120,7 +120,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="{% url 'blog:post_list' %}">
                             Blog
                         </a>
                     </li>
