improved the structure of base html template

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -27,7 +27,7 @@
     <link href="{% static 'flags/sprite-hq.css' %}" rel="stylesheet" />
 </head>
 
-<body>
+<body class="{% block page-type %}login-page sidebar-collapse{% endblock page-type %}">
     <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100"
         id="sectionsNav">
         <div class="container">
