added post share button

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -23,12 +23,6 @@
                         <div class="name">
                             <h2>{{ post.title }}</h2>
                             <h5 class="text-muted">{{ post.author|title }}</h5>
-                            <a href="#pablo" class="btn btn-just-icon btn-link btn-dribbble"><i
-                                    class="fa fa-dribbble"></i></a>
-                            <a href="#pablo" class="btn btn-just-icon btn-link btn-twitter"><i
-                                    class="fa fa-twitter"></i></a>
-                            <a href="#pablo" class="btn btn-just-icon btn-link btn-pinterest"><i
-                                    class="fa fa-pinterest"></i></a>
                         </div>
                     </div>
                 </div>
@@ -36,6 +30,38 @@
             <div class="container p-md-3">
                 <p>{{ post.body }}</p>
             </div>
+            <!-- Button trigger modal -->
+            <div class="d-flex justify-content-center p-md-5">
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                    Share
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Share</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <form action="{{ post.get_absolute_url }}" method="post">
+                {% csrf_token %}
+                <div class="modal-body">
+                    {{ form|crispy }}
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Send</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
